--- a/TapasTop/app/src/main/res/values/colors.xml
+++ b/TapasTop/app/src/main/res/values/colors.xml
@@ -21,5 +21,5 @@
     <color name="amber_900">#ff6f00</color>
     <color name="amber_700">#ffa000</color>
     <color name="title_color">#410704</color>
-
+    <color name="orange_100">#ffe6b1</color>
 </resources>
