--- a/TapasTop/app/src/main/res/layout/fragment_main_menu.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_main_menu.xml
@@ -11,16 +11,18 @@
         android:layout_height="match_parent">
         <androidx.core.widget.NestedScrollView
             xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/scrollview_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             android:background="@color/light_white">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:layout_marginBottom="60dp"
                 android:orientation="vertical">
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -283,9 +285,21 @@
             android:id="@+id/help_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/ic_help"
+            android:backgroundTint="@color/amber_700"
+            app:borderWidth="0dp"
+            android:elevation="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="5dp"/>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/ic_add_tapa"
             android:backgroundTint="@color/amber_700"
             app:borderWidth="0dp"
             android:elevation="5dp"
