--- a/TapasTop/app/src/main/res/layout/fragment_profile.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_profile.xml
@@ -76,7 +76,7 @@
                     listData="@{viewModel.friends}"
                     tools:itemCount="4"
                     tools:visibility="gone"
-                    tools:listitem="@layout/grid_view_item"/>
+                    tools:listitem="@layout/user_view_item"/>
                 <TextView
                     android:id="@+id/friends_list_empty"
                     android:layout_width="wrap_content"
@@ -535,13 +535,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:layout_marginBottom="10dp"
-                android:textAlignment="textStart"
-                android:fontFamily="@font/brandon_grotesque_bold_italic"
-                android:textColor="@color/grey_900"
-                android:textSize="20sp"
+                android:padding="20dp"
+                android:textAlignment="center"
+                android:fontFamily="@font/brandon_grotesque_black"
+                android:textSize="16sp"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintHorizontal_bias="0.1"
                 app:layout_constraintLeft_toLeftOf="parent"
