--- a/TapasTop/app/src/main/res/layout/fragment_add_tapa.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_add_tapa.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="tapaViewModel"
+            type="es.upm.isii.tapastop.model.TapaViewModel" />
+    </data>
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -67,6 +71,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tapa_img_hint"
+                    android:text="@{@string/your_rating_text(tapaViewModel.userRate)}"
                     tools:text="Your rate: 3.5" />
 
                 <RatingBar
@@ -181,7 +186,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/country_text"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="57dp"
                         android:hint="@string/country_hint"
                         android:inputType="textAutoComplete"
                         android:textCursorDrawable="@null" />
