--- a/TapasTop/app/src/main/res/layout/fragment_profile.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_profile.xml
@@ -73,7 +73,7 @@
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     android:padding="6dp"
                     android:clipToPadding="false"
-                    listData="@{viewModel.friends}"
+                    listUser="@{viewModel.friends}"
                     tools:itemCount="4"
                     tools:visibility="gone"
                     tools:listitem="@layout/user_view_item"/>
